istio-1.22.2/samples/sleep/egress/HTTP/httprouter-cnn.yaml
# Route 1 dinh tuyen traffic tu SE cnn -> cnn-egress-gateway -> edition.cnn.com

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: direct-cnn-to-egress-gateway
  namespace: sleep
spec:
  parentRefs:    # tai nguyen cha SE phai la ...  
  - kind: ServiceEntry
    group: networking.istio.io
    name: cnn
  rules:      # config backend ma cac yeu cau HTTP se duoc chuyen den
  - backendRefs:
    - name: cnn-egress-gateway-istio
      port: 80
---

#Tạo một HTTPRoute để định tuyến tất cả lưu lượng HTTP từ cnn-egress-gateway đến tên miền edition.cnn.com trên cổng 80.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forward-cnn-from-egress-gateway
  namespace: sleep
spec:
  parentRefs:
  - name: cnn-egress-gateway
  hostnames:
  - edition.cnn.com
  rules:
  - backendRefs:
    - kind: Hostname
      group: networking.istio.io
      name: edition.cnn.com
      port: 80
