istio-1.22.2/samples/sleep/egress/HTTP/virtual-service-cnn.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
  namespace: sleep
spec:   
  hosts:
  - edition.cnn.com
  gateways:   #xac dinh cac gateway ma VS ap dung 
  - istio-egressgateway
  - mesh
  http:
  - match:  # dinh tuyen tu mesh -> istio-egress
    - gateways:
      - mesh
      port: 80
    route:
    - destination:
        host: istio-egressgateway.istio-system.svc.cluster.local
        subset: cnn   # if exists
        port:
          number: 80
      weight: 100
  - match:  # dinh tuyen tu istio-egress -> host
    - gateways:
      - istio-egressgateway
      port: 80
    route:
    - destination:
        host: edition.cnn.com
        port:
          number: 80
      weight: 100
